[package]
name = "derive-builder"
version = "0.1.0"
edition = "2021"
autotests = false
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dependencies]
syn = { version = "1.0", features = ["extra-traits"] }
quote = "1.0"

[dev-dependencies]
trybuild = "1.0"
